objects/JBCXM__ReportSection__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>DisplayOrder</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__ParentSection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentSection</label>
        <referenceTo>JBCXM__ReportSection__c</referenceTo>
        <relationshipLabel>ParentSection</relationshipLabel>
        <relationshipName>ParentSection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Report__c</fullName>
        <description>This relation links ReportSection to Report</description>
        <label>Report</label>
        <referenceTo>JBCXM__Report__c</referenceTo>
        <relationshipLabel>Report</relationshipLabel>
        <relationshipName>Report</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Title__c</fullName>
        <label>Title</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>ReportSection</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>JBCXM__DisplayOrder__c</columns>
        <columns>JBCXM__ParentSection__c</columns>
        <columns>JBCXM__Report__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReportSections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>